--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Демо Bootstrap</title>
+    <title>Портал для взятия книг из библиотеки</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="src/css/style.css">
@@ -13,22 +13,22 @@
 <body>
 <div class="container">
 
-    <div class="card mt-5">
+    <div class="card mt-5 h-75">
         <div class="card-body">
-            <h5 class="card-title">Посмотреть список бронирований</h5>
+            <h5 class="card-title">Список бронирований</h5>
             <p class="books-reservations"></p>
-            <btn class="btn btn-primary btn-token">Применить</btn>
+            <btn class="btn btn-primary btn-token">Посмотреть</btn>
         </div>
     </div>
     <div class="row">
 
     </div>
 
-    <div class="card mt-5">
+    <div class="card mt-5 h-75">
         <div class="card-body">
-            <h5 class="card-title">Посмотреть книги в библиотеке</h5>
+            <h5 class="card-title">Книги в библиотеке</h5>
             <p class="libraries"></p>
-            <btn class="btn btn-primary btn-libraries">Применить</btn>
+            <btn class="btn btn-primary btn-libraries">Посмотреть</btn>
         </div>
     </div>
     <div class="row">
