--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="header">
     <div>Книжный портал</div>
-    <div class="userinfo"></div>
+    <span class="userinfo"></span>></div>
 </div>
 <div class="container">
 
