Реализовано сохранение токена в сессию

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -12,8 +12,8 @@
 
 <body>
 <div class="header">
-    <div>Книжный портал</div>
-    <span class="userinfo"></span>></div>
+    <div><span>Книжный портал</span></div>
+    <span class="userinfo"></span>
 </div>
 <div class="container">
 
@@ -50,6 +50,7 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
 </script>
 <script src="src/js/jquery-3.6.4.min.js"></script>
+<script src="src/js/auth.js"></script>
 <script src="src/js/header.js"></script>
 <script src="src/js/main.js"></script>
 <script src="src/js/libraries.js"></script>
