Реализовано добавление книги

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -79,6 +79,36 @@
             </form>
         </div>
     </div>
+    <div class="card mt-5 h-75 new-book-card">
+        <div class="card-body">
+            <h5 class="card-title">Добавление новой книги</h5>
+            <form id="new-book-form">
+
+                <label for="new-book-bookiud">Uid книги (введите его в формате f7cdc58f-2caf-4b15-9727-f89dcc629b27):</label>
+                <div>
+                    <input type="text" id="new-book-bookiud" name="new-book-bookiud"><br><br>
+                </div>
+
+                <label for="new-book-name">Название книги:</label>
+                <div>
+                    <input type="text" id="new-book-name" name="new-book-name"><br><br>
+                </div>
+
+                <label for="new-book-author">Автор:</label>
+                <div>
+                    <input type="text" id="new-book-author" name="new-book-author"><br><br>
+                </div>
+
+                <label for="new-book-genre">Жанр:</label>
+                <div>
+                    <input type="text" id="new-book-genre" name="new-book-genre"><br><br>
+                </div>
+
+
+                <btn class="btn btn-primary" id="new-book" >Создать</btn>
+            </form>
+        </div>
+    </div>
 
 </div>
 
